--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -1,6 +1,6 @@
 ---
 title: "Raster math - creating a canopy height model"
-excerpt: "Using R, calculte a canopy height model from a DTM and DSM.<br/><img src='/images/2LakesClassifier.JPG' style='width: 350px;'>"
+excerpt: "Using R, calculte a canopy height model from a DTM and DSM.<br/><img src='/images/cloudmask.png' style='width: 350px;'>"
 collection: portfolio
 ---
 <!DOCTYPE html>
@@ -29,22 +29,8 @@ collection: portfolio
 <div id='payload'>
 <iframe src='//rstudio-pubs-static.s3.amazonaws.com/280975_b78f3b1225ff4ba78089ec8225df7a85.html'></iframe>
 <button class='btn btn-tiny' id='btn-show-toolbars'>
-<i class='icon-resize-small'></i>
 </button>
 </div>
-<div class='navbar navbar-fixed-bottom' id='pagefooter'>
-<div class='navbar-inner'>
-<div class='container-fluid'>
-<ul class='nav' id='pubmeta'>
-<li>
-<button class='btn btn-small btn-inverse' id='btn-edit'>
-Edit Details
-</button>
-</li>
-<li>
-<form accept-charset="UTF-8" action="/kmp24/280975/delete" method="post" onSubmit="return confirm(&quot;This document will be permanently deleted!\n\nAre you sure?&quot;);"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="og0bImF0pZxwsWoovV/OYQRUEgnGSka3D8Q8JKz5QOM=" /></div>
-<button class='btn btn-small btn-inverse' id='btn-delete' style='transition-duration: 0s'>
-Delete
 </button>
 </form>
 
