--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -33,9 +33,8 @@ collection: portfolio
 
 </li>
 <li id='pubtitle'>
-<label>Examining Cloud Masks</label>
 </li>
 <li id='pubauthor'>
-<a href="http://rpubs.com/kmp24">by Kaitlyn</a>
+<a href="http://rpubs.com/kmp24">Click here to view the full version</a>
 </li>
   </html>
