--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -27,7 +27,7 @@ collection: portfolio
 
 <div id='pagebody'>
 <div id='payload'>
-<iframe src='//rstudio-pubs-static.s3.amazonaws.com/280975_b78f3b1225ff4ba78089ec8225df7a85.html' style='width: 600px;'></iframe>
+<iframe src='//rstudio-pubs-static.s3.amazonaws.com/280975_b78f3b1225ff4ba78089ec8225df7a85.html' style='height: 900px;'></iframe>
   </div>
 </form>
 
