--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -31,10 +31,8 @@ collection: portfolio
   </div>
 </form>
 
-</li>
-<li id='pubtitle'>
-</li>
+
 <li id='pubauthor'>
-<a href="http://rpubs.com/kmp24">Click here to view the full version</a>
+<a href="http://rpubs.com/kmp24/2806584">Click here to view the full version</a>
 </li>
   </html>
