--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -1,6 +1,6 @@
 ---
 title: "Raster math - creating a canopy height model"
-excerpt: "Using R, calculte a canopy height model from a DTM and DSM.<br/><img src='/images/cloudmask.png' style='width: 350px;'>"
+excerpt: "Using R, calculte a canopy height model from a DTM and DSM.<br/><img src='/images/chm.png' style='width: 350px;'>"
 collection: portfolio
 ---
 <!DOCTYPE html>
