--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -1,6 +1,6 @@
 ---
 title: "Raster math - creating a canopy height model"
-excerpt: "Using R, calculte a canopy height model from a DTM and DSM.<br/><img src='/images/chm.png' style='width: 350px;'>"
+excerpt: "Using R, calculte a canopy height model from a DTM and DSM.<br/><img src='/images/CHM.png' style='width: 350px;'>"
 collection: portfolio
 ---
 <!DOCTYPE html>
@@ -27,7 +27,7 @@ collection: portfolio
 
 <div id='pagebody'>
 <div id='payload'>
-<iframe src='//rstudio-pubs-static.s3.amazonaws.com/280975_b78f3b1225ff4ba78089ec8225df7a85.html' style='height: 500px; width=500px'></iframe>
+<iframe src='//rstudio-pubs-static.s3.amazonaws.com/280975_b78f3b1225ff4ba78089ec8225df7a85.html' style='height: 500px; width: 500px'></iframe>
   </div>
 </form>
 
