--- a/_portfolio/portfolio-5.html
+++ b/_portfolio/portfolio-5.html
@@ -1,6 +1,6 @@
 ---
-title: "Fire & Spectral Remote Sensing"
-excerpt: "Examines NAIP imagery of a fire study area in Colorado<br/><img src='/images/spectral.png' style='width: 350px;'>"
+title: "Fire and Spectral Remote Sensing"
+excerpt: "Examines NAIP imagery of a fire study area in Colorado<br/><img src='/images/Spectral.png' style='width: 350px;'>"
 collection: portfolio
 ---
 <!DOCTYPE html>
