--- a/_portfolio/portfolio-6.html
+++ b/_portfolio/portfolio-6.html
@@ -27,7 +27,7 @@ collection: portfolio
 
 <div id='pagebody'>
 <div id='payload'>
-<iframe src='/rstudio-pubs-static.s3.amazonaws.com/280687_2c2f1d55335e46eb885240e249a0dc52.html' style='height: 400px; width: 600px'></iframe>
+<iframe src='//rstudio-pubs-static.s3.amazonaws.com/280687_2c2f1d55335e46eb885240e249a0dc52.html' style='height: 400px; width: 600px'></iframe>
   </div>
 </form>
 
