--- a/_portfolio/portfolio-7.html
+++ b/_portfolio/portfolio-7.html
@@ -4,4 +4,4 @@ excerpt: "Prediction using a variety of analyzed factors including slope, soil t
 collection: portfolio
 ---
 
-<img src='/images/arch pot.png' style='width: 800x;'>"
+<img src='/images/arch pot.png' style='width: 800x;'>
