--- a/_portfolio/portfolio-8.html
+++ b/_portfolio/portfolio-8.html
@@ -1,7 +1,7 @@
 ---
 title: "Recreating the location of Maine's Palaeoshoreline"
-excerpt: "In this project, I calculated the shoreline of Maine pre and post isostatic rebound as a result of glacial activity in the last 12,000 years.<br/><img src='/images/PalaeoShoreline.JPG' style='width: 350px;'>"
+excerpt: "In this project, I calculated the shoreline of Maine pre and post isostatic rebound as a result of glacial activity in the last 12,000 years.<br/><img src='/images/PalaeoShoreline.jpg' style='width: 350px;'>"
 collection: portfolio
 ---
 
-<img src='/images/PalaeoShoreline.JPG' style='width: 1200x;'>
+<img src='/images/PalaeoShoreline.jpg' style='width: 1200x;'>
