--- a/_portfolio/portfolio-9.html
+++ b/_portfolio/portfolio-9.html
@@ -1,6 +1,6 @@
 ---
 title: "Webmap"
-excerpt: "A webmap of Helsinki by population<br/><img src='/images/helsinki.png' style='width: 350px;'>"
+excerpt: "A webmap of Helsinki by population<br/><img src='/images/helsinki.JPG' style='width: 350px;'>"
 collection: portfolio
 ---
 <!DOCTYPE html>
